# MIL-MLP-loss-Landscaper

./: .gitignore  .gitignore_old  README.md  pyproject.toml
modify-landscaper-to-mil-mlp/src/landscaper/: config.py
modify-landscaper-to-mil-mlp/src/landscaper/core/: directions.py  evaluator.py
modify-landscaper-to-mil-mlp/src/landscaper/models/: __init__.py  wrappers.py
src/landscaper/: __init__.py  config.py
src/landscaper/core/: __init__.py  directions.py  sampler.py
src/landscaper/data/: __init__.py  collate.py
src/landscaper/experiments/: __init__.py  run_landscape.py
src/landscaper/tasks/: __init__.py  base.py  classification.py  mil.py  mlp.py
src/mil_mlp_loss_landscaper.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_landscaper.py
