[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mil-mlp-loss-landscaper"
version = "0.1.0"
description = "MIL/MLP-aware loss-landscape framework for PyTorch"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "torch>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
where = ["src"]
